--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="page" class="site">
         <header>
+            <!-- Header top  -->
             <div class="header-top">
                 <div class="container">
                     <div class="wrapper flexitem">
