--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="page" class="site">
         <header>
             <!-- Header top  -->
-            <div class="header-top">
+            <div class="header-top mobile-hide">
                 <div class="container">
                     <div class="wrapper flexitem">
                         <div class="left">
@@ -47,6 +47,58 @@
                                             <li><a href="#">Spanish</a></li>
                                             <li><a href="#">German</a></li>
                                         </ul>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Header Navigation -->
+            <div class="header-nav">
+                <div class="container">
+                    <div class="wrapper flexitem">
+                        <a href="#" class="trigger desktop-hide"><i class="ri-menu-2-line"></i></a>
+                        <div class="left flexitem">
+                            <div class="logo"><a href="/"><span class="circle"></span>.Shopify</a></div>
+                            <nav class="mobile-hide">
+                                <ul class="flexitem second-links">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Shop</a></li>
+                                    <li>
+                                        <a href="#">Women<span class="icon-sm"><i
+                                                    class="ri-arrow-down-s-line"></i></span>
+                                        </a>
+                                    </li>
+                                    <li><a href="#">Men</a></li>
+                                    <li>
+                                        <a href="#">Sports
+                                            <span class="fly-item">New!</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="right">
+                            <ul class="flexitem second-links">
+                                <li class="mobile-hide">
+                                    <a href="#" class="wishlist">
+                                        <div class="icon-lg">
+                                            <i class="ri-heart-line"></i>
+                                            <span class="fly-item item-number">0</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="iscart">
+                                        <div class="icon-lg">
+                                            <i class="ri-shopping-cart-line"></i>
+                                            <span class="fly-item item-number">0</span>
+                                        </div>
+                                        <div class="icon-text">
+                                            <div class="mini-text">Total</div>
+                                            <div class="cart-total">$0.00</div>
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
