--- a/index.html
+++ b/index.html
@@ -194,6 +194,196 @@
                     </div>
                 </div>
             </div>
+            <!-- Header Main -->
+            <div class="header-main mobile-hide">
+                <div class="container">
+                    <div class="wrapper flexitem">
+                        <div class="left">
+                            <div class="dpt-cat">
+                                <div class="dpt-head">
+                                    <div class="main-text">All departments</div>
+                                    <div class="mini-text mobile-hide">More than 1876 products</div>
+                                    <a href="#" class="dpt-trigger mobile-hide">
+                                        <i class="ri-menu-3-line ri-xl"></i>
+                                    </a>
+                                </div>
+                                <div class="dpt-menu">
+                                    <ul class="second-links">
+                                        <li class="beauty has-child">
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-bear-smile-line"></i></span>
+                                                Beauty
+                                                <span class="icon-sm"><i class="ri-arrow-right-s-line"></i></span>
+                                            </a>
+                                            <ul>
+                                                <li><a href="#">Makeup</a></li>
+                                                <li><a href="#">Skin Care</a></li>
+                                                <li><a href="#">Hair Care</a></li>
+                                                <li><a href="#">Fragrance</a></li>
+                                                <li><a href="#">Foot & Hand Care</a></li>
+                                                <li><a href="#">Tools & Accessories</a></li>
+                                                <li><a href="#">Shave & Hair Removal</a></li>
+                                                <li><a href="#">Personal Care</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="electric has-child">
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-macbook-line"></i></span>
+                                                Electronic
+                                                <span class="icon-sm"><i class="ri-arrow-right-s-line"></i></span>
+                                            </a>
+                                            <ul>
+                                                <li><a href="#">Camera</a></li>
+                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Computers</a></li>
+                                                <li><a href="#">GPS & Navigation</a></li>
+                                                <li><a href="#">Headphones</a></li>
+                                                <li><a href="#">Home Audio</a></li>
+                                                <li><a href="#">Television</a></li>
+                                                <li><a href="#">Video Projectors</a></li>
+                                                <li><a href="#">Wearable Technology</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="fashion has-child">
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-t-shirt-air-line"></i></i></span>
+                                                Women's Fashion
+                                                <span class="icon-sm"><i class="ri-arrow-right-s-line"></i></span>
+                                            </a>
+                                            <ul>
+                                                <li><a href="#">Clothing</a></li>
+                                                <li><a href="#">Shoes</a></li>
+                                                <li><a href="#">Jewelry</a></li>
+                                                <li><a href="#">Watches</a></li>
+                                                <li><a href="#">Handbags</a></li>
+                                                <li><a href="#">Accessories</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-shirt-line"></i></span>
+                                                Men's Fashion
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-user-5-line"></i></span>
+                                                Girl's Fashion
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-user-6-fill"></i></span>
+                                                Boy's Fashion
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-heart-pulse-line"></i></span>
+                                                Health & Household
+                                            </a>
+                                        </li>
+                                        <li class="has-child homekit">
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-home-heart-line"></i></i></span>
+                                                Home & Kitchen
+                                                <span class="icon-sm"><i class="ri-arrow-right-s-line"></i></span>
+                                            </a>
+                                            <div class="mega">
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Kitchen & Dining</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Kitchen</a></li>
+                                                            <li><a href="#">Dining Room</a></li>
+                                                            <li><a href="#">Pantry</a></li>
+                                                            <li><a href="#">Great Room</a></li>
+                                                            <li><a href="#">Breakfast Nook</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="row">
+                                                        <h4><a href="#">Living</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Living Room</a></li>
+                                                            <li><a href="#">Family Room</a></li>
+                                                            <li><a href="#">Sun Room</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Bed & Bath</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Bathroom</a></li>
+                                                            <li><a href="#">Powder Room</a></li>
+                                                            <li><a href="#">Bedroom</a></li>
+                                                            <li><a href="#">Storage & Closet</a></li>
+                                                            <li><a href="#">Baby & Kids</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="row">
+                                                        <h4><a href="#">Utility</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Laudry</a></li>
+                                                            <li><a href="#">Garage</a></li>
+                                                            <li><a href="#">Mudroom</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Outdoor</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Landscape</a></li>
+                                                            <li><a href="#">Patio</a></li>
+                                                            <li><a href="#">Deck</a></li>
+                                                            <li><a href="#">Pool</a></li>
+                                                            <li><a href="#">Backyard</a></li>
+                                                            <li><a href="#">Porch</a></li>
+                                                            <li><a href="#">Exterior</a></li>
+                                                            <li><a href="#">Outdoor Kitchen</a></li>
+                                                            <li><a href="#">Front Yard</a></li>
+                                                            <li><a href="#">Driveway</a></li>
+                                                            <li><a href="#">Poolhouse</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-baidu-line"></i></span>
+                                                Pet's Supplies
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-basketball-line"></i></span>
+                                                Sports
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="icon-lg"><i class="ri-magic-line"></i></span>
+                                                Best Seller
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right">
+                            <div class="search-box">
+                                <form action="#" class="search">
+                                    <span class="icon-lg"><i class="ri-search-line"></i></span>
+                                    <input type="text" placeholder="Search for products">
+                                    <button type="submit">Search</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
         <main></main>
         <footer></footer>
