--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 <body>
     <div id="page" class="site">
+        <aside class="site-off desktop-hide">
+            <div class="off-canvas">
+                <div class="canvas-head">
+                    <div class="logo"><a href="/"><span class="circle"></span>.Shopify</a></div>
+                    <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
+                </div>
+                <div class="departments"></div>
+                <nav></nav>
+                <div class="top-nav"></div>
+            </div>
+        </aside>
+
         <header>
             <!-- Header top  -->
             <div class="header-top mobile-hide">
