Menu for mobile view copied to off-canvas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="departments"></div>
                 <nav></nav>
-                <div class="top-nav"></div>
+                <div class="thetop-nav"></div>
             </div>
         </aside>
 
@@ -66,6 +66,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Header Navigation -->
             <div class="header-nav">
                 <div class="container">
