Off-canvas Head styled

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="page" class="site">
         <aside class="site-off desktop-hide">
             <div class="off-canvas">
-                <div class="canvas-head">
+                <div class="canvas-head flexitem">
                     <div class="logo"><a href="/"><span class="circle"></span>.Shopify</a></div>
                     <a href="#" class="t-close flexcenter"><i class="ri-close-line"></i></a>
                 </div>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- Header Main -->
             <div class="header-main mobile-hide">
                 <div class="container">
