--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="page" class="site">
+        <!-- Menu for mobile. -->
         <aside class="site-off desktop-hide">
             <div class="off-canvas">
                 <div class="canvas-head flexitem">
