feature - Slider added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <!-- CDN for slider -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -44,7 +46,7 @@
                                 <li><a href="#">Order Tracking</a></li>
                                 <li>
                                     <a href="#">USD<span class="icon-sm"><i class="ri-arrow-down-s-line"></i></span>
-                                        
+
                                     </a>
                                     <ul>
                                         <li class="current"><a href="#">USD</a></li>
@@ -55,7 +57,7 @@
                                 </li>
                                 <li>
                                     <a href="#">English<span class="icon-sm"><i class="ri-arrow-down-s-line"></i></span>
-                                        
+
                                     </a>
                                     <ul>
                                         <li class="current"><a href="#">English</a></li>
@@ -106,7 +108,7 @@
                                                     </div>
                                                     <div class="flexcol">
                                                         <div class="row">
-                                                            <h4>Jewelery</h4>
+                                                            <h4>Jewelry</h4>
                                                             <ul>
                                                                 <li><a href="#">Accessories</a></li>
                                                                 <li><a href="#">Bags & Purses</a></li>
@@ -114,7 +116,7 @@
                                                                 <li><a href="#">Rings</a></li>
                                                                 <li><a href="#">Earrings</a></li>
                                                                 <li><a href="#">Bracelets</a></li>
-                                                                <li><a href="#">Body Jewelery</a></li>
+                                                                <li><a href="#">Body Jewelry</a></li>
                                                             </ul>
                                                         </div>
                                                     </div>
@@ -341,7 +343,7 @@
                                                     <div class="row">
                                                         <h4><a href="#">Utility</a></h4>
                                                         <ul>
-                                                            <li><a href="#">Laudry</a></li>
+                                                            <li><a href="#">Laundry</a></li>
                                                             <li><a href="#">Garage</a></li>
                                                             <li><a href="#">Mudroom</a></li>
                                                         </ul>
@@ -402,10 +404,83 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="slider">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="my-slider swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider0.jpg" alt="Shoes">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2>
+                                                <span>Come and Get it!</span><br>
+                                                <span>Brand New Shoes</span>
+                                            </h2>
+                                            <a href="#" class="btn btn-primary">Shop now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider1.jpg" alt="Shoes">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Quick Fashion</h4>
+                                            <h2>
+                                                <span>Fit your Wardrobe</span><br>
+                                                <span>With Luxury Items</span>
+                                            </h2>
+                                            <a href="#" class="btn btn-primary">Shop now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider2.jpg" alt="Shoes">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Quick Offer</h4>
+                                            <h2>
+                                                <span>Wooden Minimal Sofa</span><br>
+                                                <span>Extra 50% off</span>
+                                            </h2>
+                                            <a href="#" class="btn btn-primary">Shop now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="assets/slider/slider3.jpg" alt="Shoes">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Best Deals</h4>
+                                            <h2>
+                                                <span>Home Workout<br>Accessories</span><br>
+                                                <span>Push The Limit</span>
+                                            </h2>
+                                            <a href="#" class="btn btn-primary">Shop now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <footer></footer>
     </div>
-
+    <!-- CDN for slider -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
