commnent - for slider added

--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
             </div>
         </header>
         <main>
+            <!-- Slider-->
             <div class="slider">
                 <div class="container">
                     <div class="wrapper">
