add - brands added below slider

--- a/index.html
+++ b/index.html
@@ -477,6 +477,20 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Brands  -->
+            <div class="brands">
+                <div class="container">
+                    <div class="wrapper flexitem">
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/asus.png" alt="Asus logo"></a></div>
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/dng.png" alt="DnG logo"></a></div>
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/hurley.png" alt="Hurley logo"></a></div>
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/oppo.png" alt="Oppo logo"></a></div>
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/samsung.png" alt="Samsung logo"></a></div>
+                        <div class="brand-logo"><a href="#"><img src="assets/brands/zara.png" alt="Zara logo"></a></div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer></footer>
     </div>
