--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 </div>
             </div>
 
-            <!-- Trending page -->
+            <!-- Trending Products -->
             <div class="trending">
                 <div class="container">
                     <div class="wrapper">
