--- a/index.html
+++ b/index.html
@@ -830,6 +830,279 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Featured Products -->
+            <div class="featured">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="sec-top flexitem">
+                            <h2><span class="circle"></span><span>Featured Products</span></h2>
+                            <div class="second-links">
+                                <a href="#" class="view-all">View all <i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                        <div class="coloumn">
+                            <div class="products main flexwrap">
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/apparel1.jpg" alt="Man in black coat">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>25%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(2,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <div class="price">
+                                            <span class="current">$56.99</span>
+                                            <span class="normal mini-text">$75.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/apparel2.jpg" alt="Women">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>17%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(998)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Women's Lightweight Knit Hoodie Sweater Pullover</a></h3>
+                                        <div class="price">
+                                            <span class="current">$37.99</span>
+                                            <span class="normal mini-text">$45.43</span>
+                                        </div>
+                                        <div class="footer">
+                                            <ul class="mini-text">
+                                                <li>Polyster, Cotton</li>
+                                                <li>Pull on closure</li>
+                                                <li>Fashion Personality</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/apparel3.jpg" alt="Women in black">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>31%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(3,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Happy Sailed Women's Summer Boho Floral</a></h3>
+                                        <div class="price">
+                                            <span class="current">$129.99</span>
+                                            <span class="normal mini-text">$169.43</span>
+                                        </div>
+                                        <div class="footer">
+                                            <ul class="mini-text">
+                                                <li>65% Polyster, 35% Cotton</li>
+                                                <li>Imported</li>
+                                                <li>Machine Wash</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/apparel4.jpg" alt="Man in black coat">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>35%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(28)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Women's Summer Boho Floral</a></h3>
+                                        <div class="price">
+                                            <span class="current">$118.99</span>
+                                            <span class="normal mini-text">$189.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/shoe5.jpg" alt="Black Shoes">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>25%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(2,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <div class="price">
+                                            <span class="current">$56.99</span>
+                                            <span class="normal mini-text">$75.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/shoe4.jpg" alt="Man in black coat">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>25%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(2,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <div class="price">
+                                            <span class="current">$56.99</span>
+                                            <span class="normal mini-text">$75.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/shoe3.jpg" alt="Man in black coat">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>25%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(2,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <div class="price">
+                                            <span class="current">$56.99</span>
+                                            <span class="normal mini-text">$75.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="media">
+                                        <div class="thumbnail object-cover">
+                                            <a href="#">
+                                                <img src="assets/products/shoe2.jpg" alt="Man in black coat">
+                                            </a>
+                                        </div>
+                                        <div class="hoverable">
+                                            <ul>
+                                                <li class="active"><a href="#"><i class="ri-heart-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-eye-line"></i></a></li>
+                                                <li><a href="#"><i class="ri-shuffle-line"></i></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="discount circle flexcenter">
+                                            <span>25%</span>
+                                        </div>
+                                    </div>
+                                    <div class="content">
+                                        <div class="rating">
+                                            <div class="stars"></div>
+                                            <span class="mini-text">(2,548)</span>
+                                        </div>
+                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <div class="price">
+                                            <span class="current">$56.99</span>
+                                            <span class="normal mini-text">$75.43</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
         <footer></footer>
     </div>
