feat: Add sale banner
Add sale banner for Living Room Chair and Office Outfit under the featured products

--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,45 @@
                 </div>
             </div>
 
+            <!-- Banner -->
+            <div class="banners">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="coloumn">
+                            <div class="banner flexwrap">
+                                <div class="row">
+                                    <div class="item">
+                                        <div class="image">
+                                            <img src="assets/banner/banner1.jpg" alt="Living Room Chair">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Brutal Sale!</h4>
+                                            <h3><span>Get the deal in here</span><br>Living Room Chair</h3>
+                                            <a href="#" class="btn btn-primary">Shop Now</a>
+                                        </div>
+                                        <a href="#" class="over-link"></a>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="item get-gray">
+                                        <div class="image">
+                                            <img src="assets/banner/banner2.jpg" alt="Office Outfit">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Brutal Sale!</h4>
+                                            <h3><span>Discount everyday</span><br>Office Outfit</h3>
+                                            <a href="#" class="btn btn-primary">Shop Now</a>
+                                        </div>
+                                        <a href="#" class="over-link"></a>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
         <footer></footer>
     </div>
