--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="t-search">
+                                <a href="#0" class="t-search">
                                     <i class="ri-search-line"></i>
                                     <span>Search</span>
                                 </a>
@@ -1356,7 +1356,20 @@
                 </div>
             </div>
         </div>
-        
+
+        <!-- Search box for mobile menu -->
+        <div class="search-bottom desktop-hide">
+            <div class="container">
+                <div class="wrapper">
+                    <form action="" class="search">
+                        <a href="#" class="t-close search-close flexcenter"><i class="ri-close-line"></i></a>
+                        <span class="icon-lg"><i class="ri-search-line"></i></span>
+                        <input type="search" name="" placeholder="Search for products" required>
+                        <button type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- CDN for slider -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
