Add overlay effect when mobile menu is triggered

--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- Overlay -->
+        <div class="overlay"></div>
     </div>
     <!-- CDN for slider -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
