fix: Change copyright typo from .Store to .Shopify

--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p class="mini-text">Copyright 2023 © .Store. All right reserved.</p>
+                        <p class="mini-text">Copyright 2023 © .Shopify. All right reserved.</p>
                     </div>
                 </div>
             </div>
