fix: Update details of featured products
New and Unique details added for every product

--- a/index.html
+++ b/index.html
@@ -999,12 +999,12 @@
                                     <div class="content">
                                         <div class="rating">
                                             <div class="stars"></div>
-                                            <span class="mini-text">(2,548)</span>
+                                            <span class="mini-text">(548)</span>
                                         </div>
-                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <h3 class="main-links"><a href="#">Men Black Shoes</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.99</span>
-                                            <span class="normal mini-text">$75.43</span>
+                                            <span class="current">$89.99</span>
+                                            <span class="normal mini-text">$107.43</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1012,7 +1012,7 @@
                                     <div class="media">
                                         <div class="thumbnail object-cover">
                                             <a href="#">
-                                                <img src="assets/products/shoe4.jpg" alt="Man in black coat">
+                                                <img src="assets/products/shoe4.jpg" alt="Green Shoes">
                                             </a>
                                         </div>
                                         <div class="hoverable">
@@ -1023,18 +1023,18 @@
                                             </ul>
                                         </div>
                                         <div class="discount circle flexcenter">
-                                            <span>25%</span>
+                                            <span>16%</span>
                                         </div>
                                     </div>
                                     <div class="content">
                                         <div class="rating">
                                             <div class="stars"></div>
-                                            <span class="mini-text">(2,548)</span>
+                                            <span class="mini-text">(1218)</span>
                                         </div>
-                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <h3 class="main-links"><a href="#">Women's Summer Tosca Shoe</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.99</span>
-                                            <span class="normal mini-text">$75.43</span>
+                                            <span class="current">$104.99</span>
+                                            <span class="normal mini-text">$120.43</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1042,7 +1042,7 @@
                                     <div class="media">
                                         <div class="thumbnail object-cover">
                                             <a href="#">
-                                                <img src="assets/products/shoe3.jpg" alt="Man in black coat">
+                                                <img src="assets/products/shoe3.jpg" alt="white colorful Shoe">
                                             </a>
                                         </div>
                                         <div class="hoverable">
@@ -1053,18 +1053,18 @@
                                             </ul>
                                         </div>
                                         <div class="discount circle flexcenter">
-                                            <span>25%</span>
+                                            <span>29%</span>
                                         </div>
                                     </div>
                                     <div class="content">
                                         <div class="rating">
                                             <div class="stars"></div>
-                                            <span class="mini-text">(2,548)</span>
+                                            <span class="mini-text">(128)</span>
                                         </div>
-                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <h3 class="main-links"><a href="#">Walking Show Sneaker Womens</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.99</span>
-                                            <span class="normal mini-text">$75.43</span>
+                                            <span class="current">$139.99</span>
+                                            <span class="normal mini-text">$170.43</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1072,7 +1072,7 @@
                                     <div class="media">
                                         <div class="thumbnail object-cover">
                                             <a href="#">
-                                                <img src="assets/products/shoe2.jpg" alt="Man in black coat">
+                                                <img src="assets/products/shoe2.jpg" alt="Sneakers">
                                             </a>
                                         </div>
                                         <div class="hoverable">
@@ -1083,18 +1083,18 @@
                                             </ul>
                                         </div>
                                         <div class="discount circle flexcenter">
-                                            <span>25%</span>
+                                            <span>30%</span>
                                         </div>
                                     </div>
                                     <div class="content">
                                         <div class="rating">
                                             <div class="stars"></div>
-                                            <span class="mini-text">(2,548)</span>
+                                            <span class="mini-text">(1,423)</span>
                                         </div>
-                                        <h3 class="main-links"><a href="#">Under Armour Men's Tech</a></h3>
+                                        <h3 class="main-links"><a href="#">Sketchers Women's Go Joy Walking Shoe Sneaker</a></h3>
                                         <div class="price">
-                                            <span class="current">$56.99</span>
-                                            <span class="normal mini-text">$75.43</span>
+                                            <span class="current">$45.99</span>
+                                            <span class="normal mini-text">$64.43</span>
                                         </div>
                                     </div>
                                 </div>
