--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,7 @@
             <div class="container">
                 <div class="wrapper">
                     <form action="" class="search">
-                        <a href="#" class="t-close search-close flexcenter"><i class="ri-close-line"></i></a>
+                        <a href="#0" class="t-close search-close flexcenter"><i class="ri-close-line"></i></a>
                         <span class="icon-lg"><i class="ri-search-line"></i></span>
                         <input type="search" name="" placeholder="Search for products" required>
                         <button type="submit">Search</button>
